# edgar-research

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-01-edgar-research-toolkit.md  2026-06-02-digestible-financials.md
docs/superpowers/specs/: 2026-06-01-edgar-research-cowork-toolkit-design.md  2026-06-02-digestible-financials-design.md
skills/edgar-research/: SKILL.md
src/edgar_research/: cli.py  concepts.py  errors.py  identity.py  output.py
src/edgar_research/commands/: company.py  filings.py  financials.py  holdings.py  insiders.py  read.py  search.py
tests/: conftest.py  test_cli_smoke.py  test_concepts.py  test_errors.py  test_financials_headline.py  test_financials_ratios.py  test_identity.py  test_live.py  test_output.py  test_read_form_select.py  test_read_sections.py  test_scaffold.py
