[project]
name = "edgar-research"
version = "0.1.0"
description = "SEC EDGAR research toolkit (edgartools wrapper) for Claude Cowork"
requires-python = ">=3.11"
dependencies = [
    "edgartools>=5.33.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[project.scripts]
edgar-research = "edgar_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_research"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: hits the live SEC EDGAR API (skipped unless RUN_LIVE=1)",
]
